--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="main">
-        
+        <div class="top"></div>
+        <div class="list-part"></div>
     </div>
     <script src="./js/main.js"></script>
 </body>
