--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,16 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="main">
-        <div class="top"></div>
-        <div class="list-part"></div>
+        <div class="top">To do list</div>
+        <div class="list-part">
+            <input type="text" name="" id="text">
+            <input type="button" id="close">
+        </div>
     </div>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
