--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="top">To do list</div>
         <div class="list-part">
             <input type="text" name="" id="text">
-            <input type="button" id="close">
+            <input type="button" id="add">
         </div>
     </div>
     <script src="./js/main.js"></script>
