--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <div class="main">
         <div class="top">To do list</div>
         <div class="list-part">
-            <input type="text" name="" id="text">
-            <input type="button" id="add">
+            <div class="input-field">
+                <input type="text" name="" id="text">
+                <input type="button" id="add">
+            </div>
+            <ul></ul>
         </div>
     </div>
     <script src="./js/main.js"></script>
